--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha03'
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
 }
